added github link

--- a/task_tool/templates/footer.html
+++ b/task_tool/templates/footer.html
@@ -1,4 +1,10 @@
 </div>
 
+ <footer class="text-muted">
+      <div class="container">
+          <p>Source code: <a href="https://github.com/alexanderulanowski/task_tool">GitHub</a></p>
+      </div>
+ </footer>
+
 </body>
 </html>
