--- a/task_tool/templates/header.html
+++ b/task_tool/templates/header.html
@@ -15,6 +15,16 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <style>
+        footer {
+          padding-top: 3rem;
+          padding-bottom: 3rem;
+        }
+
+        footer p {
+          margin-bottom: .25rem;
+        }
+    </style>
 
     </head>
     <body>
