--- a/task_tool/templates/index.html
+++ b/task_tool/templates/index.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 
-<form class="form-inline center-block">
+<form class="form-inline">
     <label class="mr-sm-2" for="username">Username:</label>
 
     <input class="form-control" id="username" value="{{ username }}" class="" />
